objects/ssot__ProductServiceCampaignItem__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__AssetId__c</fullName>
        <label>Asset</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__CreatedById__c</fullName>
        <label>Created By</label>
        <length>36</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__CreatedDate__c</fullName>
        <label>Created Date</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceId__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceObjectId__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Id__c</fullName>
        <label>Product Service Campaign Item Id</label>
        <length>36</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InternalOrganizationId__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Name__c</fullName>
        <label>Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ProductId__c</fullName>
        <label>Product</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ProductServiceCampaignId__c</fullName>
        <label>Product Service Campaign</label>
        <length>36</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ProductServiceCampaignItemStatus__c</fullName>
        <label>Product Service Campaign Item Status</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ProductServiceCmpnItemStatusCategory__c</fullName>
        <label>Product Svc Cmpn Item Status Category</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1705061036851_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ProductServiceCampaignItem_ProductId_rel</label>
        <referenceTo>ssot__Product__dlm</referenceTo>
        <relationshipLabel>ProductServiceCampaignItem_ProductId_rel</relationshipLabel>
        <relationshipName>rel_1705061036851_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1705061037551_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ProductServiceCampaignItem_ProductSe_rel</label>
        <referenceTo>ssot__ProductServiceCampaign__dlm</referenceTo>
        <relationshipLabel>ProductServiceCampaignItem_ProductSe_rel</relationshipLabel>
        <relationshipName>rel_1705061037551_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1705061037884_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ProductServiceCampaignItem_CreatedBy_rel</label>
        <referenceTo>ssot__User__dlm</referenceTo>
        <relationshipLabel>ProductServiceCampaignItem_CreatedBy_rel</relationshipLabel>
        <relationshipName>rel_1705061037884_end</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>